--- a/04 - Projeto 02/index.html
+++ b/04 - Projeto 02/index.html
@@ -8,7 +8,7 @@
         <title>Treine me</title>
         
         <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="/styles.css" class="css">
+        <link rel="stylesheet" href="styles.css" class="css">
         
     </head>
     <body>
