--- a/08 - Avançando no Javascript/01 - Jogo da adivinhação/index.html
+++ b/08 - Avançando no Javascript/01 - Jogo da adivinhação/index.html
@@ -19,13 +19,13 @@
             
             <form>
                 <input id="inputNumber" type="number">
-                <button onclick="handleClick(event)">Tentar</button>
+                <button id="btnTry">Tentar</button>
             </form>
         </div>
 
         <div class="screen2 hide">
-            <h2>Acertou em 3 vezes</h2>
-            <button>Jogar novamente</button>
+            <h2></h2>
+            <button id="btnReset">Jogar novamente</button>
         </div>
     </main>
 
