--- a/08 - Avançando no Javascript/02 - Projeto IMC/index.html
+++ b/08 - Avançando no Javascript/02 - Projeto IMC/index.html
@@ -15,11 +15,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!--Scripts-->
-    <script src="./script.js" defer></script>
+    <script src="./js/script.js" defer type="module"></script>
 </head>
 <body>
-    <div class="container">
 
+    <div class="alert-error">
+        Digite somente números
+    </div>
+
+    <div class="container">
         <main class="card">
             <form>
                 <h1 class="title">Cálculo de IMC</h1>
@@ -41,12 +45,22 @@
 
                 <button type="submit">
                     Calcular IMC
-                    <img src="./arrow-up-right.svg" alt="Seta apontando para a direita">
+                    <img src="./image/arrow-up-right.svg" alt="Seta apontando para a direita">
                 </button>
 
             </form>
         </main>
-        
+    </div>
+
+    <div class="modal-wrapper">
+        <div class="modal card">
+            <h2 class="title">
+                <button class="close">
+                    <img src="./image/close.svg" alt="Imagem para fechar o popup">
+                </button>
+                <span>Seu IMC é de: </span>
+            </h2>
+        </div>
     </div>
     
 </body>
